<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/layout_bar"
            android:id="@+id/linearLayout">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/passo1"
                android:layout_margin="@dimen/espacamento_grande"
                android:layout_weight="1"
                android:textSize="17sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/proximo_itens"
                android:layout_margin="@dimen/espacamento_grande"
                android:textSize="17sp"

        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_bar_height"
            android:orientation="horizontal"
            android:background="@color/layout_bar"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
    >

        <ImageView
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_arrow_left"
                android:layout_marginTop="@dimen/espacamento_curto"/>
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anterior"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/espacamento_curto"
                android:layout_marginRight="@dimen/espacamento_maximo_4"
                android:layout_marginLeft="@dimen/espacamento_curto"

        />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/espacamento_curto"
                android:layout_marginLeft="@dimen/espacamento_minimo"
                android:layout_marginRight="@dimen/espacamento_minimo">


            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_filled_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"
            />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proximo"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/espacamento_curto"
                android:layout_marginLeft="@dimen/espacamento_maximo_2"
        />
        <ImageView
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_arrow_right"
                android:layout_marginTop="@dimen/espacamento_curto"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>