<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_all"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/layout_bar"
            android:id="@+id/linearLayout">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/passo3b"
                android:layout_margin="@dimen/espacamento_grande"
                android:layout_weight="1"
                android:textSize="17sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/proxitens"
                android:layout_margin="@dimen/espacamento_grande"
                android:textSize="17sp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ll_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/linearLayout"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            android:text="@string/info_pedido"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/espacamento_maximo_2"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_titulo"
            app:layout_constraintLeft_toLeftOf="@id/ll_titulo"
            android:layout_marginLeft="@dimen/espacamento_maximo"
            android:layout_marginRight="@dimen/espacamento_maximo"
            android:layout_marginTop="@dimen/espacamento_maximo_2"/>


    <include layout="@layout/progressbar_carregamento"
             android:id="@+id/ll_loading"
             android:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Todos os materiais já foram cadastrados."
            app:layout_constraintTop_toBottomOf="@id/ll_titulo"
            app:layout_constraintLeft_toLeftOf="@id/ll_titulo"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/espacamento_maximo"
            android:visibility="gone"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_bar_height"
            android:orientation="horizontal"
            android:background="@color/layout_bar"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_layout_anterior"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

            <ImageView
                    android:id="@+id/iv_seta_esquerda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow_left"
                    android:layout_marginTop="@dimen/espacamento_curto"
                    android:layout_marginLeft="@dimen/espacamento_curto"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anterior"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/espacamento_curto"
                    app:layout_constraintBottom_toBottomOf="@id/iv_seta_esquerda"
                    app:layout_constraintLeft_toRightOf="@+id/iv_seta_esquerda"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/espacamento_curto"
                android:layout_marginLeft="@dimen/espacamento_minimo"
                android:layout_marginRight="@dimen/espacamento_minimo" >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_filled_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_layout_proximo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

            <ImageView
                    android:id="@+id/iv_seta_direita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow_right"
                    android:layout_marginTop="@dimen/espacamento_curto"
                    android:layout_marginRight="@dimen/espacamento_curto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proximo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/espacamento_curto"
                    android:layout_marginLeft="@dimen/espacamento_maximo_2"
                    app:layout_constraintBottom_toBottomOf="@id/iv_seta_direita"
                    app:layout_constraintRight_toLeftOf="@id/iv_seta_direita"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>