<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ll_all"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/linear_layout_passos"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:orientation="horizontal"
            android:background="@color/layout_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/passo1"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:textSize="17sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/proximo_itens"
                android:layout_margin="12dp"
                android:textSize="17sp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ll_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/linear_layout_passos"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_passos"
            android:text="@string/cadastra_recebimento_nome_activity_1"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/espacamento_maximo"/>


    <TextView
            android:id="@+id/tv_erro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nenhum envio feito."
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/espacamento_maximo"
            android:layout_marginRight="@dimen/espacamento_maximo"
            android:layout_marginTop="@dimen/espacamento_maximo_2"
            app:layout_constraintTop_toBottomOf="@id/ll_titulo"/>

    <include layout="@layout/progressbar_carregamento"
             android:id="@+id/ll_loading"
             android:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_lista"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/espacamento_maximo"
            android:layout_marginRight="@dimen/espacamento_maximo"
            android:layout_marginTop="@dimen/espacamento_maximo_2"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_bar_anterior_proximo"
            app:layout_constraintTop_toBottomOf="@+id/ll_titulo"/>

    <LinearLayout
            android:id="@+id/ll_bar_anterior_proximo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_bar_height"
            android:orientation="horizontal"
            android:background="@color/layout_bar"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_layout_anterior"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

            <ImageView
                    android:id="@+id/iv_seta_esquerda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow_left"
                    android:layout_marginTop="@dimen/espacamento_curto"
                    android:layout_marginLeft="@dimen/espacamento_curto"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anterior"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/espacamento_curto"
                    app:layout_constraintBottom_toBottomOf="@id/iv_seta_esquerda"
                    app:layout_constraintLeft_toRightOf="@+id/iv_seta_esquerda"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/espacamento_curto"
                android:layout_marginLeft="@dimen/espacamento_minimo"
                android:layout_marginRight="@dimen/espacamento_minimo">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_filled_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flow_circle"
                    android:layout_marginRight="@dimen/espacamento_medio"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_layout_proximo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

            <ImageView
                    android:id="@+id/iv_seta_direita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow_right"
                    android:layout_marginTop="@dimen/espacamento_curto"
                    android:layout_marginRight="@dimen/espacamento_curto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proximo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/espacamento_curto"
                    android:layout_marginLeft="@dimen/espacamento_maximo_2"
                    app:layout_constraintBottom_toBottomOf="@id/iv_seta_direita"
                    app:layout_constraintRight_toLeftOf="@id/iv_seta_direita"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>